--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-google-button": "^0.7.2",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.31.1",
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.4.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
